<resources>
    <string name="app_name">Eracord</string>
    <string name="drawer_open">close</string>
    <string name="drawer_close">open</string>
    <string name="chapter">Select Chapters</string>
    <string name="org">Select Organization</string>

    <!-- feedback form -->
    <string name="from">From</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="send_feedback">Send Feedback</string>

    <!-- activity_main -->
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- activity_org -->
    <string name="pin_label">Enter 4 digit pin again</string>
    <string name="choose_organization">Choose organization</string>
    <string name="hint_login_user">Sign in With Different User?</string>
    <string name="login">Login</string>

    <!-- activity_pin_layout -->
    <string name="enter_pin">Enter Pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="generate_mpin">Generate mPin</string>

    <!-- activity_class -->
    <string name="no_data">No Data Available</string>
    <string name="no_subject">No Subject</string>
    <string name="no_daily_teaches">No Daily Teaches</string>
    <string name="no_off_classes">No Off Classes</string>
    <string name="no_students">No Students</string>
    <string name="no_tt">No Timetable</string>

    <!-- Student_catalog -->
    <string name="load_more">Load more</string>

    <!-- Activity_daily_teaching -->
    <string name="create_daily_catalog">Create Daily Catalog</string>
    <string name="select_date">Select Date</string>
    <string name="today_date">Todays Date</string>
    <string name="create">Create</string>
    <string name="points">Points</string>

    <!-- Daily_fill_catalog -->
    <string name="daily_teaches">Daily Teaches</string>
    <string name="SubClassName">SubClassName</string>

    <!-- Daily_fill_catalog -->
    <string name="date">Date</string>
    <string name="chapter_text">Chapter</string>
    <string name="standard">Standard</string>
    <string name="dailyid">dailyid</string>
    <string name="no_more_data_to_load">No more data to load</string>
    <string name="no_timetable">No Timetable</string>

    <string name="timetable_label">Weekly TimeTable</string>
</resources>
