<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="7dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appBgColor">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"
            android:layout_width="match_parent"></include>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:text="@string/from"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:textStyle="normal|bold"
                        android:textAllCaps="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/from_cust"
                        android:layout_weight="0.05"
                        android:textStyle="normal|bold"
                        android:textColor="@color/textcolor" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <TextView
                        android:text="@string/title"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:textStyle="normal|bold" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/title"
                        android:layout_weight="0.01"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:textColor="@color/textcolor"
                        android:inputType="textAutoCorrect|textShortMessage"
                        android:background="@android:drawable/editbox_background" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:weightSum="1">

                    <TextView
                        android:text="@string/message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="normal|bold"
                        android:layout_marginBottom="10dp" />

                    <EditText
                        android:id="@+id/message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:inputType="textMultiLine"
                        android:scrollHorizontally="false"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:background="@android:drawable/editbox_background"
                        android:layout_weight="19.15"
                        android:lines="15"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <Button
                        android:text="@string/send_feedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/send_feedback"
                        android:background="@color/colorAccent"
                        android:textColor="@color/colorWhite"
                        android:textStyle="normal|bold"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/colorWhite"
        android:scrollbars="vertical">

    </android.support.v7.widget.RecyclerView>
</android.support.v4.widget.DrawerLayout>